--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ward"
-version = "1.0.2"
+version = "1.1.0"
 authors = ["Alexander Krivács Schrøder <alexschrod@gmail.com>"]
 edition = "2018"
 license = "MIT"
@@ -10,5 +10,6 @@ repository = "https://github.com/alexschrod/ward"
 readme = "README.md"
 keywords = ["swift", "guard"]
 categories = ["rust-patterns"]
+documentation = "https://docs.rs/ward"
 
 [dependencies]
